p8/tests/t302.err
Semantic error on line 10: A statement block for the animation block 'bounce' has already been defined.
